# device-detector-py

./: pyproject.toml
src/device_detector_py/: __init__.py  client_hints.py  main.py
src/device_detector_py/parser/: abstract_bot_parser.py  abstract_parser.py  bot.py  operating_system.py  vendor_fragment.py
src/device_detector_py/parser/client/: abstract_client_parser.py  browser.py  feed_reader.py  hints.py  library.py  media_player.py  mobile_app.py  pim.py
src/device_detector_py/parser/client/browser/: engine.py
src/device_detector_py/parser/device/: abstract_device_parser.py  camera.py  car_browser.py  console.py  hbb_tv.py  mobile.py  notebook.py  portable_media_player.py  shell_tv.py
