[project]
name = "device-detector-py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Diwaker Ghimire", email = "dwkrghm@pm.me" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/device_detector_py"]
